--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,13 @@
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8080],
+	// "forwardPorts": [8080],
+	// "portsAttributes": {
+	// 	"8080": {
+	// 		"label": "Website",
+	// 		"onAutoForward": "notify"
+	// 	}
+	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
