--- a/manufood-website/package.json
+++ b/manufood-website/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-img": "^6.0.1",
     "browser-sync": "^3.0.3",
     "concurrently": "^9.1.2",
     "serve": "^14.2.4"
